# personalChatbot

./: .env  .gitignore  main.py  pyproject.toml
chatbotBackend/: app.py  pyproject.toml
